# NinGEn

./: .gitignore  CMakeLists.txt  README.md
include/: nhntxtcol.cpp  nhntxtcol.h
include/GLFW/: libglfw.so.3.4
include/glad/: glad.c  glad.h
res/Shaders/: fragment_shader.glsl  simple_vertex_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/Core/: core.h  keyboardinput.cpp  keyboardinput.h  mouseinput.cpp  mouseinput.h  window.cpp  window.h
src/Graphics/: camera.cpp  camera.h  ibo.cpp  ibo.h  mesh.cpp  mesh.h  model.cpp  model.h  reader.cpp  reader.h  shader.cpp  shader.h  skeletalanimation.cpp  skeletalanimation.h  skeletalanimationmanager.cpp  skeletalanimationmanager.h  tempmodel.cpp  tempmodel.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  writer.h
src/Math/: mat4.cpp  mat4.h  math.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/Utils/: fileutils.h
